# nuffi.app

./: .eslintrc.cjs  .gitignore  Cargo.toml  PROJECT_STRUCTURE.md  README.md  commit_msg.txt  index.html  package-lock.json  package.json  tailwind.config.js  tech_stack_status.md  tsconfig.json  update_plan.md  vite.config.ts
.kiro/hooks/: auto-git-workflow.kiro.hook
.kiro/steering/: product.md  structure.md  tech.md
backend/: requirements.txt
backend/app/: __init__.py  database.py  main.py
backend/app/models/: __init__.py  company.py  installation.py  workspace.py
backend/app/routers/: __init__.py  installations.py  team.py  templates.py  workspaces.py
backend/app/services/: __init__.py  team_onboarding.py  template_loader.py  tool_manager.py  workspace_installer.py
src/: App-debug.tsx  App.css  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: cli.rs  installer.rs  lib.rs  main.rs  scanner.rs  workspace_manager.rs
src-tauri/src/database/: config_store.rs  migrations.rs  mod.rs
src-tauri/src/models/: ai_analysis.rs  config.rs  environment.rs  error.rs  mod.rs  workflow.rs
src/components/: AnimatedBackground.tsx  InstallationProgress.tsx  KeyboardShortcutsModal.tsx  NuffiLogo.tsx  V3Box.tsx
src/components/Charts/: AnimatedParticles.tsx  Epic3DChart.tsx  (+2 more)
src/hooks/: useKeyboardShortcuts.ts
src/pages/: AICenter.tsx  AIRecommendations.tsx  Community.tsx  CreateWorkspace.tsx  Marketplace.tsx  PowerMode.tsx  PresetWizard.tsx  Settings.tsx  SimpleCreateWorkspace.tsx  SystemScanner.tsx  TeamSetup.tsx  V3Ultimate.tsx  WorkflowDesigner.tsx  WorkspaceHub.tsx  Workspaces.tsx  WowFactorDemo.tsx
src/services/: notificationService.ts  systemScanner.ts  workspaceManager.ts
src/stores/: appStore.ts  simpleAppStore.ts  workspaceStore.ts
src/types/: index.ts  workspace.ts
src/utils/: index.ts
(+12 files in other folders)
