[workspace]
members = ["src-tauri"]
resolver = "2"

[workspace.dependencies]
tauri = { version = "1.5.4", features = ["dialog-all", "fs-all", "notification-all", "os-all", "path-all", "process-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }